--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DISCORD_TOKEN=MTM2NTMyMjg5NDE2NjcyNDY3OA.GhOFvF.6Eq5om1--J0OPMYNhmKXzo2lj76VFZ-fXM2hHU
+DISCORD_TOKEN=MTM2NTMyMjg5NDE2NjcyNDY3OA.Gs3YN3.w0SnVpQa1gBer8t6UUkXC1NPctjETrLzpJ7HHE
 GEMINI_API_KEY=AIzaSyBfw7x5pNwK17CasgNAENvo7FqJ4lSyGqE
 QNA_CHANNEL_ID=1365329454049661049
 MUSIC_CHANNEL_ID=1365217297421045766
