--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ GEMINI_API_KEY=AIzaSyBfw7x5pNwK17CasgNAENvo7FqJ4lSyGqE
 QNA_CHANNEL_ID=1365329454049661049
 MUSIC_CHANNEL_ID=1365217297421045766
 CALEN_CHANNEL_ID=1365377982084157460
+GITHUB_CHANNEL_ID=1365633932640518214
+COMMITS_CHANNEL_ID=1365624552129822801
+GITHUB_TOKEN=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
